--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "canvas-confetti": "^1.9.3",
     "firebase": "^11.1.0",
     "next": "15.1.3",
     "react": "^19.0.0",
