--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,11 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.13.17",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
