--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
+    "@react-three/postprocessing": "^3.0.4",
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "canvas-confetti": "^1.9.3",
@@ -20,6 +23,8 @@
     "react-dom": "^19.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "three": "^0.175.0",
+    "three-stdlib": "^2.35.14",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
